WIP improving test mantainability and including easyrandom and good practices, modify pom to generate API with openapi